--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/drug-service/src/main/resources/application.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/drug-service/src/main/resources/application.yml
@@ -13,7 +13,8 @@ spring:
                 group: group3
                 namespace: public
                 password: nacos
-                server-addr: 192.172.0.160:8848
+#                server-addr: 192.172.0.160:8848
+                server-addr: 127.0.0.1:8848
                 username: nacos
 server:
     port: 8080
