!63 完成门诊叫号功能 张政 * 门诊微服务 完成叫号功能 张政

--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/drug-service/src/main/resources/application-pro.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/drug-service/src/main/resources/application-pro.yml
@@ -6,7 +6,8 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: 1.117.97.60:8848
+#        server-addr: 127.0.0.1:8848
         namespace: public
         password: nacos
         username: nacos
