--- a/cloud-hospital-parent/cloud-hospital-nacos-parent/drug-service/src/main/resources/application-pro.yml
+++ b/cloud-hospital-parent/cloud-hospital-nacos-parent/drug-service/src/main/resources/application-pro.yml
@@ -1,20 +1,7 @@
-server:
-  port: 8080
 spring:
-  application:
-    name: drug-service
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 1.117.97.60:8848
-#        server-addr: 127.0.0.1:8848
-        namespace: public
-        password: nacos
-        username: nacos
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/hospital_four?serverTimezone=UTC
+    name: defaultDataSource
+    url: jdbc:mysql://192.172.0.163:3307/hospital_four?serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 123456
-mybatis:
-  mapper-locations: classpath:/mybatis/mapper/*.xml
